# python-ci-project

./: README.md  pyproject.toml
.github/workflows/: ci-cd.yaml
myapp/: __init__.py  calculator.py
myapp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_calculator.py
