[build-system]
requires=["setuptools>=68", "wheel"]
build-backend="setuptools.build_meta"

[project]
name="myapp"
version="0.1.0"
description="A sample python app for Github Actions CI/CD"
readme="README.md"
requires-python=">=3.10"
authors=[
  {name="Lukmon Adeokun", email="adekunledally@gmail.com"}
]
dependencies=[]

[project.optional-dependencies]
dev=[
 "pytest>=8.0",
 "ruff>=0.5.0",
 "build>=1.2.1"
]

[tool.pytest.ini_options]
testpaths=["tests"]

[tool.ruff]
line-length=88

[tool.ruff.lint]
select=["E","F","I"]